force-app/main/default/objects/Deal_Transaction_Line__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <formula>if(
   contains(RecordType.Name, &quot;Multi&quot;),
   ff_Order_Line__r.Transaction_Date__c ,
   DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>