force-app/main/default/objects/Deal_Transaction_Line__c/fields/Replacement_Deal_Transaction_Line__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Deal_Transaction_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Deal Transaction Line</label>
    <referenceTo>Deal_Transaction_Line__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines (Replacement Deal Transaction Line)</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>