force-app/main/default/objects/Deal_Transaction_Line__c/fields/Revenue_account2__c.field-meta.xml
<CustomField>
    <fullName>Revenue_account2__c</fullName>
    <formula>if(text(Deal__r.Accounting_Treatment_AU__c)=&quot;Principal&quot;,

if(or(text(Deal__r.GST_AU__c) =&quot;GST free&quot;, text(Deal__r.GST_NZ__c) =&quot;GST free&quot;),
&quot;a9y2x000000001OAAQ&quot;,
&quot;a9y2x000000001QAAQ&quot;
),

if(or(text(Deal__r.GST_AU__c) = &quot;GST free&quot;, text(Deal__r.GST_NZ__c) =&quot;GST free&quot;),
&quot;a9y2x000000001PAAQ&quot;,
&quot;a9y2x000000001RAAQ&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue_account2</label>
    <type>Text</type>
</CustomField>