force-app/main/default/objects/Deal_Transaction_Line__c/fields/Revenue_Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Account_Text__c</fullName>
    <label>Revenue Account Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>