force-app/main/default/objects/Deal_Transaction_Line__c/fields/Reverse_Cabin_Journal__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Cabin_Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reverse Cabin Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines (Reverse Cabin Journal)</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines5</relationshipName>
    <type>Lookup</type>
</CustomField>