force-app/main/default/objects/Deal_Transaction_Line__c/fields/Reverse_Expense_Recognition_Date__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Expense_Recognition_Date__c</fullName>
    <label>Reverse Expense Recognition Date</label>
    <type>Date</type>
</CustomField>