force-app/main/default/objects/Deal_Transaction_Line__c/fields/TAD_Booking_Record__c.field-meta.xml
<CustomField>
    <fullName>TAD_Booking_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAD Booking Record</label>
    <referenceTo>TAD_Booking_Records__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>