force-app/main/default/objects/Deal_Transaction_Line__c/fields/Tax_Factor__c.field-meta.xml
<CustomField>
    <fullName>Tax_Factor__c</fullName>
    <formula>Deal_Transaction__r.Tax_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>