force-app/main/default/objects/Deal_Transaction_Line__c/fields/Tax_Free_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Amount__c</fullName>
    <formula>Amount__c - Taxable_Amount__c -  Tax_Amount__c</formula>
    <label>Tax Free Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>