force-app/main/default/objects/Deal_Transaction_Line__c/fields/Tax_Free_Outputs_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Outputs_Tax_Code__c</fullName>
    <formula>Deal_Transaction__r.Company__r.Default_Non_Taxable_Outputs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax-Free Outputs Tax Code ID</label>
    <type>Text</type>
</CustomField>