force-app/main/default/objects/Deal_Transaction_Line__c/fields/Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount__c</fullName>
    <formula>if(
    Tax_Amount__c = 0,
    0,
    if( text(Deal__r.Accounting_Treatment_AU__c) = &quot;Principal&quot;, Amount__c / (((Deal_Transaction__r.Tax_Rate__c)/100)+1)

,(Amount__c - Order_Line_Item__r.OL_Cost__c) / (((Deal_Transaction__r.Tax_Rate__c)/100)+1))
)

/*if(
    Tax_Amount__c = 0,
    0,
   if( text(Deal__r.Accounting_Treatment_AU__c) = &quot;Principal&quot;, Amount__c / (((Deal_Transaction__r.Tax_Rate__c)/100)+1)

,(Amount__c - order_line_item__r.OL_Cost__c) / (((Deal_Transaction__r.Tax_Rate__c)/100)+1))
)*/


/*
if(
    Tax_Amount__c = 0,
    0,
    Amount__c / (((Deal_Transaction__r.Tax_Rate__c)/100)+1)
)
*/



/*This was the original formula, cause tax tax free amount to be negative
if(
    Tax_Amount__c = 0,
    0,
    Tax_Amount__c / (Deal_Transaction__r.Tax_Rate__c/100)
)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>