force-app/main/default/objects/Deal_Transaction_Line__c/fields/Taxable_Amount_New__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount_New__c</fullName>
    <label>Taxable Amount New</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>