force-app/main/default/objects/Deal_Transaction_Line__c/fields/Taxable_Inputs_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Inputs_Tax_Code__c</fullName>
    <formula>Deal_Transaction__r.Company__r.Default_Taxable_Inputs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Inputs Tax Code ID</label>
    <type>Text</type>
</CustomField>