force-app/main/default/objects/Deal_Transaction_Line__c/fields/Transaction_Date2__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date2__c</fullName>
    <formula>Deal_Transaction__r.Transaction_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Date2</label>
    <type>Date</type>
</CustomField>