force-app/main/default/objects/Deal_Transaction_Line__c/fields/Variance_Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>Variance_Credit_Account__c</fullName>
    <formula>if(
Expense_Variance__c &gt; 0,
Offset_Account__c,
Expense_Account__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Credit Account</label>
    <type>Text</type>
</CustomField>