force-app/main/default/objects/Deal_Transaction_Line__c/fields/Variance_Debit_Account__c.field-meta.xml
<CustomField>
    <fullName>Variance_Debit_Account__c</fullName>
    <formula>if(
    Expense_Variance__c  &lt; 0,
    Offset_Account__c,    
    Expense_Account__c
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Debit Account</label>
    <type>Text</type>
</CustomField>