force-app/main/default/objects/Deal_Transaction_Line__c/fields/Variance_Recognition_Date__c.field-meta.xml
<CustomField>
    <fullName>Variance_Recognition_Date__c</fullName>
    <formula>if(
   Transaction_Date__c &lt;  Recognition_Date__c,
   Recognition_Date__c,
   Transaction_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Recognition Date</label>
    <type>Date</type>
</CustomField>