force-app/main/default/objects/Deal_Transaction_Line__c/recordTypes/Coupon_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Coupon_Transaction</fullName>
    <active>true</active>
    <label>Coupon Transaction</label>
</RecordType>