force-app/main/default/objects/Deal_Transaction_Line__c/recordTypes/Forward_Contract.recordType-meta.xml
<RecordType>
    <fullName>Forward_Contract</fullName>
    <active>true</active>
    <label>Forward Contract</label>
</RecordType>