force-app/main/default/objects/Deal_Transaction_Line__c/recordTypes/Multi_Line_Expense.recordType-meta.xml
<RecordType>
    <fullName>Multi_Line_Expense</fullName>
    <active>true</active>
    <label>Multi-Line Expense</label>
</RecordType>