force-app/main/default/objects/Deal_Transaction_Line__c/recordTypes/Sale_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Sale_Transaction</fullName>
    <active>true</active>
    <label>Sale Transaction</label>
</RecordType>