force-app/main/default/objects/Deal_Transaction_Line__c/recordTypes/Single_Line_Expense.recordType-meta.xml
<RecordType>
    <fullName>Single_Line_Expense</fullName>
    <active>true</active>
    <label>Single-Line Expense</label>
</RecordType>