force-app/main/default/objects/Deal_Transaction_Line__c/validationRules/Tax_Amount_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Amount_Missing</fullName>
    <active>true</active>
    <errorConditionFormula>and(
   not(isblank(Vendor_Invoice_Number__c)),
   isblank(Tax_Amount__c)
)</errorConditionFormula>
    <errorMessage>A Vendor Invoice Number has been entered, Tax Amount cannot be Nill</errorMessage>
</ValidationRule>