force-app/main/default/objects/Deal_Transaction_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Expected_Amount__c</columns>
    <columns>Is_Escape_Deal__c</columns>
    <columns>ff_Order_Line__c</columns>
    <columns>Status1__c</columns>
    <columns>Account__c</columns>
    <columns>Original_Deal_Transaction_Line__c</columns>
    <columns>Processed_ER__c</columns>
    <columns>Deal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payable_Invoice__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>