force-app/main/default/objects/Deal_Transaction_Line__c/listViews/Kate.listView-meta.xml
<ListView>
    <fullName>Kate</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Expected_Amount__c</columns>
    <columns>Is_Escape_Deal__c</columns>
    <columns>Account__c</columns>
    <columns>Original_Deal_Transaction_Line__c</columns>
    <columns>Deal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payable_Invoice__c</columns>
    <columns>Revenue_Account_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>Kate</label>
</ListView>