force-app/main/default/objects/Deal_Transaction_Line__c/listViews/SLE.listView-meta.xml
<ListView>
    <fullName>SLE</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Expected_Amount__c</columns>
    <columns>Is_Escape_Deal__c</columns>
    <columns>ff_Order_Line__c</columns>
    <columns>Status1__c</columns>
    <columns>Account__c</columns>
    <columns>Original_Deal_Transaction_Line__c</columns>
    <columns>Processed_ER__c</columns>
    <columns>Deal__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Escape_Deal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status1__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Original_Deal_Transaction_Line__c</field>
        <operation>notContain</operation>
        <value>DTL</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Deal_Transaction_Line__c.Single_Line_Expense</value>
    </filters>
    <label>SLE</label>
</ListView>